# spex

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  configuration.md  mcp-reference.md  user-guide.md  vision.md
src/spex/: __init__.py  cli.py
src/spex/commands/: compile.py  context.py  graph_cmd.py  impact.py  init.py  scan.py  serve.py  stale.py  validate.py
src/spex/compiler/: __init__.py
src/spex/config/: __init__.py
src/spex/graph/: __init__.py  builder.py  model.py  query.py
src/spex/inference/: __init__.py
src/spex/mcp/: __init__.py  server.py  tools.py
src/spex/scanner/: __init__.py  parser.py  types.py  walker.py
tests/: conftest.py
tests/fixtures/minimal/: INDEX.md  orphan.md
tests/fixtures/minimal/features/: overview.md  requirements.md  tech-spec.md
tests/fixtures/minimal/journeys/: onboarding.md
tests/test_graph/: test_builder.py  test_query.py
tests/test_scanner/: test_parser.py
tests/test_validation/: test_validate.py
